*Hash and Debug tabs now wrap long lines instead of cutting them off.
*Window opens at a more comfortable size.
*Fixed startup issue where the embedded database could fail to open on some systems.
*Added "Reset to default" in Rules editor right-click menu.
*File and folder pickers now use native system dialogs and remember recent locations better.

2.4.1 14.02.2026:
*AppImage now supports automatic updates.

2.4.0 29.01.2026:
*Added dialog to handle filenames exceeding OS limits (255 bytes) - offers Truncate, Skip, or Apply to All.
*Default rename rule template now includes TRUNCATE<200,...> for safety.
*Fixed TRUNCATE not actually truncating content to the specified length.
*TRUNCATE now uses byte count instead of character count (matters for Japanese/Chinese titles).

2.3.0 27.01.2026:
*Parallel file hashing - now processes 4 files simultaneously for faster hashing on multi-core systems.
*Hashing progress shown per-file in status column (e.g., "Hashing 45%").
*Status bar now shows real-time hashing speed and session summary on completion.
*Added keyboard shortcuts help dialog (press '?' to view).
*Fixed keyboard shortcuts interfering with system shortcuts (Ctrl+A, Cmd+C, etc.).
*Keyboard shortcuts now work with all keyboard layouts.

2.2.0 25.01.2026:
*Sibling files with same base name are now moved/renamed together with main file.
*Added "Remote" option to MyList state dropdown (for NAS/cloud storage).
*Added "remote" as valid state in !state and !state2 commands.
*Fixed empty argument handling for !anime, !group, !randomanime commands.
*Fixed !mylist output to show accurate anime information.

2.1.1 25.01.2026:
*Fixed Rules tab Save button not persisting changes to disk.
*Fixed quote parsing in rule names - quotes at end of strings are now properly stripped.
*Fixed config directory not being created automatically on save.

2.1.0 25.01.2026:
*Fixed Apply Rules context menu not working due to quote parsing bug.